<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Python Samples</string>
    <string name="app_start">Нажми меня</string>
    <string name="light">Light on</string>

    <string name="app_description">
        С помощью Python Samples Вы овладеете основами программирования на языке Python. Для Вас более 200 примеров алгоритмов, а также краткий справочник по основным структурам данных.Изучайте Python легко и просто!
    </string>
    <string name="chooser_text">Отправить загагалунки </string>
    <!-- AdMob ad unit IDs -->
    <string name="banner_home_footer">ca-app-pub-3634613834833645/7273897010</string>
    <string name="interstitial_full_screen">ca-app-pub-3634613834833645/5797163812</string>
    <string-array name="menu_names">
        <item>Строки</item>
        <item>Словари</item>
        <item>Исключения</item>
        <item>Файлы</item>
        <item>Циклы</item>
        <item>Функции</item>
        <item>Генераторы</item>
        <item>Условия</item>
        <item>Списки</item>
        <item>ООП</item>
        <item>Время</item>
        <item>Кортежи</item>
        <item>Сортировка</item>
        <item>Numpy</item>
        <item>Pandas</item>
        <item>Утилиты</item>
    </string-array>

    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>

    <!--            Strings                     -->
    <string name="string_menu">Строки</string>
    <string-array name="strings_menu_names">
        <item>@string/string_notes</item>
        <item>@string/string_operations</item>
    </string-array>
    <string name="string_notes">Заметки</string>
    <string name="string_operations">Базовые операции</string>


    <!--           Dictionary              -->
    <string name="dic_menu">Словари</string>
    <string-array name="dic_menu_names">
        <item>@string/dic_notes</item>
        <item>@string/dic_operations</item>
    </string-array>
    <string name="dic_notes">Заметки</string>
    <string name="dic_operations">Базовые операции</string>


    <!--            Exeptions                -->
    <string name="exept_menu">Исключения</string>
    <string-array name="exept_menu_names">
        <item>@string/exept_notes</item>
        <item>@string/exept_operations</item>
    </string-array>
    <string name="exept_notes">Заметки</string>
    <string name="exept_operations">Базовые операции</string>


    <!--           Files                -->
    <string name="file_menu">Файлы</string>
    <string-array name="file_menu_names">
        <item>@string/file_notes</item>
        <item>@string/file_operations</item>
        <item>@string/files_ext_operations</item>
    </string-array>
    <string name="file_notes">Заметки</string>
    <string name="file_operations">Базовые операции</string>
    <string name="files_ext_operations">Расширеный функционал</string>


    <!--           Loops                -->
    <string name="loop_menu">Циклы</string>
    <string-array name="loop_menu_names">
        <item>@string/loop_notes</item>
        <item>@string/loop_operations</item>
    </string-array>
    <string name="loop_notes">Заметки</string>
    <string name="loop_operations">Базовые операции</string>


    <!--           Functions                -->
    <string name="func_menu">Функции</string>
    <string-array name="func_menu_names">
        <item>@string/func_notes</item>
        <item>@string/func_operations</item>
    </string-array>
    <string name="func_notes">Заметки</string>
    <string name="func_operations">Базовые операции</string>


    <!--           Generators                -->
    <string name="gen_menu">Генераторы</string>
    <string-array name="gen_menu_names">
        <item>@string/gen_operations</item>
    </string-array>
    <string name="gen_operations">Базовые операции</string>


    <!--           Conditions                -->
    <string name="cond_menu">Условия</string>
    <string-array name="cond_menu_names">
        <item>@string/cond_operations</item>
    </string-array>
    <string name="cond_operations">Базовые операции</string>


    <!--           Lists                -->
    <string name="list_menu">Списки</string>
    <string-array name="list_menu_names">
        <item>@string/list_notes</item>
        <item>@string/list_operations</item>
    </string-array>
    <string name="list_notes">Заметки</string>
    <string name="list_operations">Базовые операции</string>


    <!--           Tuples                -->
    <string name="tup_menu">Кортежи</string>
    <string-array name="tup_menu_names">
        <item>@string/tup_notes</item>
        <item>@string/tup_operations</item>
    </string-array>
    <string name="tup_notes">Заметки</string>
    <string name="tup_operations">Базовые операции</string>


    <!--           OOP                -->
    <string name="oop_menu">ООП</string>
    <string-array name="oop_menu_names">
        <item>@string/oop_notes</item>
        <item>@string/oop_operations</item>
        <item>@string/oop_patterns</item>
        <item>@string/oop_reload</item>
    </string-array>
    <string name="oop_notes">Заметки</string>
    <string name="oop_operations">Базовые операции</string>
    <string name="oop_patterns">Шаблоны</string>
    <string name="oop_reload">Перегрузка операторов</string>


    <!--           Time                -->
    <string name="time_menu">Время</string>
    <string-array name="time_menu_names">
        <item>@string/time_notes</item>
        <item>@string/time_operations</item>
    </string-array>
    <string name="time_notes">Заметки</string>
    <string name="time_operations">Базовые операции</string>


    <!--           Sorting                -->
    <string name="sort_menu">Сортировка</string>
    <string-array name="sort_menu_names">
        <item>@string/sort_operations</item>
    </string-array>
    <string name="sort_operations">Базовые операции</string>

    <!--           Numpy                -->
    <string name="numpy_menu">NumPy</string>
    <string-array name="numpy_menu_names">
        <item>@string/numpy_notes</item>
        <item>@string/numpy_operations</item>
        <item>@string/numpy_ext_operations</item>
    </string-array>
    <string name="numpy_notes">Заметки</string>
    <string name="numpy_operations">Базовые операции</string>
    <string name="numpy_ext_operations">Расширеный функционал</string>


    <!--           Pandas                -->
    <string name="pandas_menu">Pandas</string>
    <string-array name="pandas_menu_names">
        <item>@string/pandas_notes</item>
        <item>@string/pandas_cheats</item>
        <item>@string/pandas_operations</item>
        <item>@string/pandas_files_operations</item>
        <item>@string/pandas_group_operations</item>
        <item>@string/pandas_merge_operations</item>
    </string-array>
    <string name="pandas_notes">Заметки</string>
    <string name="pandas_cheats">Шпаргалки (англ.)</string>
    <string name="pandas_operations">Базовые операции</string>
    <string name="pandas_files_operations">Операции с файлами</string>
    <string name="pandas_group_operations">Группировка</string>
    <string name="pandas_merge_operations">Слияние</string>


    <!--           Utils                -->
    <string name="util_menu">Утилиты</string>
    <string-array name="util_menu_names">
        <item>@string/util_operations</item>
    </string-array>
    <string name="util_operations">Базовые операции</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>